# webintel

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: ef027d82d5e6_create_initial_schema.py
app/: __init__.py  main.py
app/api/routes/: crawl_jobs.py  health.py
app/core/: config.py  errors.py  logging.py
app/db/: base.py  session.py
app/db/models/: __init__.py  crawl_job.py  email.py  enums.py  important_page.py  link.py  page.py  social_link.py  technology.py  website.py
app/db/repositories/: __init__.py  crawl_job_repository.py  page_repository.py  website_repository.py
app/schemas/: common.py  crawl_job.py
app/services/: url_intake.py
app/services/crawler/: __init__.py  email_extractor.py  fetcher.py  important_page_detector.py  link_extractor.py  parser.py  robots.py  social_link_detector.py  url_normalizer.py
app/workers/: __init__.py  celery_app.py  dispatcher.py
tests/: __init__.py
tests/fixtures/: company_homepage.html  malformed_page.html
tests/integration/: test_crawl_jobs_api.py  test_health.py  test_repositories.py
tests/unit/: test_config.py  test_dispatcher.py  test_email_extractor.py  test_fetcher.py  test_important_page_detector.py  test_link_extractor.py  test_models.py  test_parser.py  test_robots.py  test_social_link_detector.py  test_url_intake.py  test_url_normalizer.py
