[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "webintel"
version = "0.1.0"
description = "Company website crawling and intelligence API"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic>=1.14,<2.0",
    "asyncpg>=0.30,<1.0",
    "beautifulsoup4>=4.13,<5.0",
    "celery[redis]>=5.4,<6.0",
    "fastapi>=0.115,<1.0",
    "httpcore>=1.0.9,<1.1",
    "httpx>=0.28,<0.29",
    "lxml>=5.3,<7.0",
    "pydantic-settings>=2.7,<3.0",
    "redis>=5.2,<7.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10.0",
    "pytest-asyncio>=0.25,<2.0",
    "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
